Fix: Bootstrap 5 dark mode - control icons were not styled using the Bootstrap dark mode selector
Brining fd35b85d9db88d3041e8516ad914a1e12e29913e to the 1 branch

--- a/css/common.scss
+++ b/css/common.scss
@@ -161,7 +161,8 @@ table.dataTable {
     }
 }
 
-html.dark {
+html.dark,
+:root[data-bs-theme="dark"] {
 	table.dataTable {
 		td.dt-control {
 			&:before {
